[package]
name = "lobster-tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers", "json"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
pem = "3.0.2"
jsonwebtoken = "9.1.0"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "uuid",
    "time",
    "ipnetwork",
    "json",
] }
pbkdf2 = "0.12.2"
time = "0.3.30"
dotenvy = "0.15.7"

