[package]
name = "lobster-tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ignoreAuth = []

[dependencies]
axum = { version = "0.6", features = ["ws", "headers", "json"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.33", features = ["full"] }
tower = "0.4"
pem = "3.0"
jsonwebtoken = "9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "uuid",
    "time",
    "ipnetwork",
    "json",
] }
uuid = { version = "1.5", features = ["v4", "fast-rng", "serde"] }
time = { version = "0.3", features = ["serde"] }
pbkdf2 = "0.12"
dotenvy = "0.15"
futures = "0.3"

