[package]
name = "lobster-tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cors = []

[dependencies]
axum = { version = "0.7", features = ["ws", "query", "json"] }
axum-extra = { version = "0.9", features = ["query"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.33", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["cors"] }
jsonwebtoken = { version = "9.1", features = ["use_pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "time",
    "ipnetwork",
    "json",
] }
rustls = { version = "0.20" }
uuid = { version = "1.5", features = ["v4", "fast-rng", "serde"] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
pbkdf2 = "0.12"
dotenvy = "0.15"
futures = "0.3"
once_cell = "1.18"
sha2 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
hex = "0.4"
lapin = { version = "2.3", features = ["rustls"] }
